# BORIS-App

./: Lemur_catta_ethogram.boris  README.asciidoc  README.md  README.rst  android.txt  boris.kv  boris.py  buildozer.spec  demo.boris  demo_project.boris  main.old  main.py  main_kivy-1.11.py  main_md.py  main_new.py  pyproject.toml  simple_project.boris  test.boris_ethogram  test.boris_observation.tsv  test.boris_subjects
boris/: boris.kv  buildozer.spec  demo.boris  main.py  test5.boris  to_do.txt
dev/: buildozer.spec  main.py
file_manager/: main.py
gps/: main_gps.py
kivy/: android.txt  boris.kv  buildozer.spec  buildozer_boris.spec  buildozer_qrcode.spec  main.gps  main.py  main_boris.py  main_qrcode.py
kivymd/: buildozer.spec
